# eprofiler

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  python-tests.yml
docs/: conf.py  eprofiler.rst  usage.rst
eprofiler/: __init__.py  auditor.py  eprofiler.py  performance.py
examples/: example.py  example_performance.py  examples_auditor.py
tests/: test_auditor.py  test_eprofiler.py  test_performance.py
