[project]
name = "eprofiler"
version = "0.0.8"
description = "A simple tool to monitor execution of functions."
readme = "README.md"
authors = [{name="emre"}]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4", # Explicitly include 3.4
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["profiling", "Profilers"]
requires-python = ">=3.4"
dependencies = []

[project.urls]
Homepage = 'https://github.com/eyukselen/eprofiler'
Documentation = 'https://eprofiler.readthedocs.io/en/latest/'
"Source Code" = 'https://github.com/eyukselen/eprofiler'

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
